Replace runAfter with runInSequence API and use virtual threads by default
Co-authored-by: ilumar589 <5979296+ilumar589@users.noreply.github.com>